cmake_minimum_required(VERSION 3.16)
project(C C)

set(CMAKE_C_STANDARD 99)

add_executable(C main.c)
add_executable(8-25 Practice/8-25.c)
add_executable(Parenthesis_Matching Practice/Parenthesis_Matching.c)
add_executable(9-6 Practice/9-6.c)
add_executable(9-7 Practice/9-7.c)
add_executable(9-8 Practice/9-8.c)
add_executable(9-9 Practice/9-9.c)
add_executable(9-11 Practice/9-11.c)
add_executable(9-12 Practice/9-12.c)
add_executable(10-1 Practice/10-1.c)
add_executable(10-2 Practice/10-2.c)
add_executable(Special_matrix_compression_storage Practice/Special_matrix_compression_storage.c)
add_executable(prime Practice/prime.c)
add_executable(BubbleSort Practice/BubbleSort.c)
add_executable(SelectionSort Practice/SelectionSort.c)
add_executable(InsertionSort Practice/InsertionSort.c)
add_executable(QuickSort Practice/QuickSort.c)
add_executable(OpStack Practice/OpStack.c)
add_executable(17-2 Practice/17-2.c)
add_executable(stP Practice/stP.c)
add_executable(easyEncode Practice/easyEncode.c)
add_executable(8-24 Practice/8-24.c)
add_executable(8-22 Practice/8-22.c)
add_executable(8-18 Practice/8-18.c)
add_executable(8-8 Practice/8-8.c)
add_executable(8-6 Practice/8-6.c)
add_executable(6-8 Practice/6-8.c)
add_executable(8-1 Practice/8-1.c)
add_executable(8-2 Practice/8-2.c)
add_executable(8-3 Practice/8-3.c)
add_executable(BiTree Practice/BiTree.c)
add_executable(LevelOrder Practice/LevelOrder.c)
add_executable(opQueue Practice/opQueue.c)
add_executable(1 Runoob100/1.c)
add_executable(2 Runoob100/2.c)
add_executable(3 Runoob100/3.c)
add_executable(17 Runoob100/17.c)
add_executable(4 Runoob100/4.c)
add_executable(18 Runoob100/18.c)
add_executable(19 Runoob100/19.c)
add_executable(numChange Practice/numChange.c)
